Add ability to use apiKey for auth
